# src/main/java/br/edu/fiec/RotaVan/features/auth/dto/AdminRegisterRequest.java
@@ -1,0 +1,22 @@
+package br.edu.fiec.RotaVan.features.auth.dto;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.Data;
+
+@Data
+public class AdminRegisterRequest {
+
+    @NotBlank(message = "O nome não pode estar em branco")
+    @Size(min = 3, message = "O nome deve ter no mínimo 3 caracteres")
+    private String nome;
+
+    @NotBlank(message = "O email não pode estar em branco")
+    @Email(message = "Forneça um endereço de email válido")
+    private String email;
+
+    @NotBlank(message = "A senha não pode estar em branco")
+    @Size(min = 6, message = "A senha deve ter no mínimo 6 caracteres")
+    private String password;
+}
